--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ document.onmouseup=reEnable
 	<title>Document</title>
 	<link rel="stylesheet" href="piraamid.css">
 </head>
-<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="false">
 	<div class="anakutu">
 
 		<div class="resim">
