--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@ document.onmousedown=disableselect
 document.onmouseup=reEnable
 }
 
+ document.onkeypress = function (event) {
+        event = (event || window.event);
+        if (event.keyCode == 123) {
+            return false;
+        }
+    }
+    document.onmousedown = function (event) {
+        event = (event || window.event);
+        if (event.keyCode == 123) {
+            return false;
+        }
+    }
+document.onkeydown = function (event) {
+        event = (event || window.event);
+        if (event.keyCode == 123) {
+            return false;
+        }
+    }
 </script>
 	
 	
