--- a/index.html
+++ b/index.html
@@ -61,9 +61,20 @@ body {
 </ul>
 
 </div>
-<div id="sol"> </div>
+<div id="sol">
+<h4>Üye Girişi</h4>
+<HR>
+  <div class="duyuru">
+  <form>
+  <p>Henüz üye değilseniz lütfen üye olunuz</p>
+  <p>K. Adı:<input class="uye-text" type="text" name=""></p>
+  <p>Parola:<input class="uye-text" type="password" name=""></p>
+  <p><input class="uye-buton" type="button" value="Giriş Yap" name=""></p>
+  </form>
+  </div>
+</div>
 <div id="icerik">
-<iframe src="ana.html" name="icerik" width="100%" height="100%"></iframe>
+<iframe frameborder="0" src="ana.html" name="icerik" width="100%" height="100%"></iframe>
 </div>
 <div id="sag">
 <h4>Duyurular</h4><hr>
