--- a/ogretmenler.html
+++ b/ogretmenler.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body style="background-color:#DBE;list-style-type:lower-alpha">
+<body style="color:#F5EDED;list-style-type:lower-alpha">
 <ol><li>İSMAİL SEVEN</li>
 <li>MUHAMMET KALKAN</li><li>KEMALETTİN AKTAŞ</li><li>HÜSEYİN CANATA</li><li>FİGEN YETKİN</li><li>SEVİNÇ PETEK</li>
 </ol>
