--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ body {
 
 </div>
 <div id="sol">
-<h4>Üye Girişi</h4>
-<HR>
+<h4>Üye Girişi</h4><HR>
   <div class="duyuru">
   <form>
   <p>Henüz üye değilseniz lütfen üye olunuz</p>
